--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -64,5 +64,7 @@
              show_feed: @feed.blank?,
              empty_text: @feed ? "No posts imported yet from this feed." : "No posts yet.") %>
 
-  <%= pagination(->(page) { posts_path(base_pagination_params.merge(page: page)) }) %>
+  <%= pagination do |pagination_params, params|
+    posts_path(pagination_params.merge(feed_id: params[:feed_id]))
+  end %>
 </div>
