Omit unused parameter

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -51,7 +51,7 @@
       </table>
     </div>
 
-    <%= pagination do |pagination_params, params|
+    <%= pagination do |pagination_params|
       admin_users_path(pagination_params)
     end %>
   <% else %>
