--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -51,9 +51,7 @@
       </table>
     </div>
 
-    <%= pagination do |pagination_params|
-      admin_users_path(pagination_params)
-    end %>
+    <%= render_pagination { |pagination| admin_users_path(pagination) } %>
   <% else %>
     <div class="flex flex-col items-center justify-center py-12">
       <p class="text-slate-500">No users found</p>
