Define strict locals for all partials (#237)
* Define strict locals for all partials

* Eliminate the legacy pagination partial

* Refactor `pagination_for` helper

* Replace `pagination_for` calls with the new component

* Dry render calls with a reusable helper

* Simplify path helper definition

* Omit unused parameter

* Remove unused code

* Refactor pagination helper calls

* Properly include filter params in pagination links

* Reduce the amount of test records in pagination test cases

--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,6 +1,4 @@
 <% content_for :title, "Events" %>
-<% base_pagination_params = {} %>
-<% base_pagination_params[:filter] = @filter.to_h if @filter.present? %>
 
 <div class="space-y-8">
   <%= render PageHeaderComponent.new(title: "Events") do |header| %>
@@ -113,10 +111,7 @@
     </div>
 
     <div data-key="admin.events.pagination">
-      <%= pagination_for @events,
-                         collection_name: "events",
-                         path_helper: ->(page) { admin_events_path(base_pagination_params.merge(page: page)) },
-                         template: "shared/pagination_tailwind" %>
+      <%= render_pagination { |pagination, params| admin_events_path(pagination.merge(@filter.present? ? { filter: @filter.to_h } : {})) } %>
     </div>
   <% else %>
     <div class="ff-card">
