--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -33,7 +33,7 @@
     <%= render EmptyStateComponent.new do %>
       <h2 class="ff-h2 mb-2 text-slate-500">No access tokens yet</h2>
       <p class="ff-text mb-6 text-slate-500">Add a FreeFeed API access token to enable content reposting.</p>
-      <%= link_to "Create New Token", new_settings_access_token_path, class: class_names("ff-button", "ff-button--compact") %>
+      <%= link_to "Create New Token", new_settings_access_token_path, class: "ff-button" %>
     <% end %>
   <% end %>
 </div>
