--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -23,7 +23,7 @@
       <h1 class="ff-h1">Welcome to Feeder</h1>
       <p class="ff-text">Feeder helps you automatically share content from your favorite sources to FreeFeed.</p>
       <p class="ff-text">To get started, add a FreeFeed access token so Feeder can post on your behalf.</p>
-      <div>
+      <div class="mt-8">
         <%= link_to "Add FreeFeed token", new_settings_access_token_path, class: "ff-button" %>
       </div>
     </section>
@@ -31,7 +31,7 @@
     <section class="space-y-4">
       <h1 class="ff-h1">Welcome to Feeder</h1>
       <p class="ff-text">Great! You've added a FreeFeed access token. Now you can create your first feed.</p>
-      <div>
+      <div class="mt-8">
         <%= link_to "Add feed", new_feed_path, class: "ff-button" %>
       </div>
     </section>
