Add a todo note

--- a/app/components/freefeed_user_component.html.erb
+++ b/app/components/freefeed_user_component.html.erb
@@ -1,7 +1,5 @@
 <div class="flex items-center gap-3">
-  <img
-    alt="<%= @username %>"
-    class="<%= avatar_classes %>"
-  >
+  <%# TBD: Add src %>
+  <img alt="<%= @username %>" class="<%= avatar_classes %>">
   <span class="text-lg"><%= @username %></span>
 </div>
