--- a/app/views/settings/access_tokens/_show_content.html.erb
+++ b/app/views/settings/access_tokens/_show_content.html.erb
@@ -56,7 +56,9 @@
       <p class="text-slate-600 mb-4">
         Posts created with this token will appear on FreeFeed on behalf of:
       </p>
-      <%= render FreefeedUserComponent.new(user: @access_token.access_token_detail.user_info) %>
+      <div class="w-fit min-w-[240px] rounded-xl border border-slate-200 bg-white p-4 shadow-sm">
+        <%= render FreefeedUserComponent.new(user: @access_token.access_token_detail.user_info) %>
+      </div>
     </div>
 
     <div class="space-y-4">
