--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Status" %>
 
-<% has_active_tokens = @user.access_tokens.active.exists? %>
-<% has_feeds = @user.total_feeds_count > 0 %>
+<% suggest_to_add_tokens = @user.access_tokens.active.none? %>
+<% suggest_adding_feeds = @user.total_feeds_count.zero? %>
 
 <div class="space-y-8">
   <% if @user.email_deactivated? %>
@@ -18,20 +18,20 @@
     </div>
   <% end %>
 
-  <% if !has_active_tokens %>
+  <% if suggest_to_add_tokens %>
     <section class="space-y-4">
       <h1 class="ff-h1">Welcome to Feeder</h1>
       <p class="ff-text">Feeder helps you automatically share content from your favorite sources to FreeFeed.</p>
       <p class="ff-text">To get started, add a FreeFeed access token so Feeder can post on your behalf.</p>
-      <div>
+      <div class="mt-8">
         <%= link_to "Add FreeFeed token", new_settings_access_token_path, class: "ff-button" %>
       </div>
     </section>
-  <% elsif !has_feeds %>
+  <% elsif suggest_adding_feeds %>
     <section class="space-y-4">
       <h1 class="ff-h1">Welcome to Feeder</h1>
       <p class="ff-text">Great! You've added a FreeFeed access token. Now you can create your first feed.</p>
-      <div>
+      <div class="mt-8">
         <%= link_to "Add feed", new_feed_path, class: "ff-button" %>
       </div>
     </section>
