--- a/app/components/modal_component.html.erb
+++ b/app/components/modal_component.html.erb
@@ -11,8 +11,8 @@
     <!-- Modal content -->
     <div class="relative bg-white rounded-lg shadow">
       <!-- Modal header -->
-      <div class="flex items-center justify-between p-4 md:p-5">
-        <h3 id="<%= @modal_id %>-title" class="text-xl font-semibold text-gray-900">
+      <div class="flex items-center justify-between p-4 md:p-6">
+        <h3 id="<%= @modal_id %>-title" class="text-3xl font-semibold text-gray-900">
           <%= @title %>
         </h3>
         <%= tag.button type: "button",
@@ -25,12 +25,12 @@
         <% end %>
       </div>
       <!-- Modal body -->
-      <div id="<%= @modal_id %>-description" class="p-4 md:p-5 space-y-4">
+      <div id="<%= @modal_id %>-description" class="p-4 md:p-6 space-y-4">
         <%= content %>
       </div>
       <% if footer? %>
         <!-- Modal footer -->
-        <div class="flex items-center p-4 md:p-5 gap-3">
+        <div class="flex items-center p-4 md:p-6 gap-3">
           <%= footer %>
         </div>
       <% end %>
