--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -66,7 +66,7 @@
                   </div>
                   <div class="max-w-sm text-sm text-slate-600">
                     <div class="truncate">
-                      <%= event.message.present? ? event.message : content_tag(:em, "No message", class: "text-slate-500") %>
+                      <%= render EventDescriptionComponent.new(event: event) %>
                     </div>
                   </div>
                 </div>
