--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,8 +1,5 @@
 <% content_for :title, "Status" %>
 
-<% suggest_to_add_tokens = @user.access_tokens.active.none? %>
-<% suggest_adding_feeds = @user.total_feeds_count.zero? %>
-
 <div class="space-y-8">
   <% if @user.email_deactivated? %>
     <div class="ff-alert ff-alert--warning space-y-2" role="alert">
@@ -18,7 +15,8 @@
     </div>
   <% end %>
 
-  <% if suggest_to_add_tokens %>
+  <% if @user.onboarding? && !@has_active_tokens %>
+    <%# State 1: Onboarding - No active tokens %>
     <section class="space-y-4">
       <h1 class="ff-h1">Welcome to Feeder</h1>
       <p class="ff-text">Feeder helps you automatically share content from your favorite sources to FreeFeed.</p>
@@ -27,7 +25,8 @@
         <%= link_to "Add FreeFeed token", new_access_token_path, class: "ff-button" %>
       </div>
     </section>
-  <% elsif suggest_adding_feeds %>
+  <% elsif @user.onboarding? && @has_active_tokens && !@has_feeds %>
+    <%# State 2: Onboarding - Has token, no feeds %>
     <section class="space-y-4">
       <h1 class="ff-h1">Welcome to Feeder</h1>
       <p class="ff-text">Great! You've added a FreeFeed access token. Now you can create your first feed.</p>
@@ -36,7 +35,20 @@
       </div>
     </section>
   <% else %>
+    <%# State 3 & 4: Active user - Show normal dashboard %>
     <h1 class="ff-h1">Status</h1>
+
+    <% if @user.active? && !@has_active_tokens %>
+      <%# State 4: Active user with no active tokens - Show warning %>
+      <div class="ff-alert ff-alert--warning space-y-2" role="alert">
+        <p class="ff-text ff-text--heavy">You don't have any active FreeFeed tokens.</p>
+        <p class="ff-text">
+          <%= link_to "Add a token", new_access_token_path, class: "ff-link" %>
+          to resume posting.
+        </p>
+      </div>
+    <% end %>
+
     <%= render UserStatsComponent.new(user: @user) %>
 
     <% if @recent_events.any? %>
