--- a/app/views/feeds/_identification_error.html.erb
+++ b/app/views/feeds/_identification_error.html.erb
@@ -1,5 +1,4 @@
-<div data-identification-state="error"
-     class="rounded-lg border border-slate-200 bg-white px-6 py-8 shadow-sm space-y-6">
+<div data-identification-state="error" class="rounded-lg border border-slate-200 bg-white px-6 py-8 shadow-sm space-y-6">
   <div class="rounded-md bg-red-50 p-4">
     <div class="flex">
       <div class="flex-shrink-0">
