--- a/app/views/feeds/_identification_loading_poll.html.erb
+++ b/app/views/feeds/_identification_loading_poll.html.erb
@@ -1,7 +1,4 @@
-<%= render CardComponent.new(
-      class: "flex items-center gap-3",
-      role: "status"
-    ) do %>
+<%= render CardComponent.new(class: "flex items-center gap-3", role: "status") do %>
   <div class="flex-shrink-0">
     <%= render SpinnerComponent.new %>
   </div>
